# touhou-music-demo

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/LoopMusic/: loopmusic.hpp  songinfo.hpp
src/: main.cpp
src/LoopMusic/: loopmusic.cpp  songinfo.cpp
